--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cloud-app-react",
   "version": "0.1.0",
-  "homepage": "https://gJahnke23.github.io",
+  "homepage": "https://gJahnke23.github.io/test",
   "private": true,
   "dependencies": {
     "@heroicons/react": "^1.0.6",
